--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -7,11 +7,11 @@
     padding: 4px 16px;
     background-color: white;
 
-    /* border: none; */
-
     border-color: black;
     border-radius: 12px;
     font-size: 16px;
+
+    cursor: pointer;
 }
 
 .button:hover {
@@ -25,7 +25,7 @@
 
     background-color: seagreen;
     
-    border-color: white;
+    border-color: seagreen;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .3);
     color: white;
 }
